--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
     <style>
+      
         body, html {
             margin: 0;
             padding: 20px;
@@ -275,20 +276,29 @@
             <ul>
                 <li><a href="#intro">Introducción</a></li>
                 <li><a href="#marco">Marco Teórico</a></li>
+                <ul>
+                    <li><a href="#sistema">Sistema de control de vuelo</a></li>
+                    <li><a href="#control">Computadora de control de vuelo</a></li>
+                    <li><a href="#superficie">Superficies de control</a></li>
+                    <li><a href="#actuador">Sensores y actuadores</a></li>
+                    <li><a href="#luces">Sistemas de luces aeronáuticas</a></li>
+                    <ul>
+                        <li><a href="#navegacion">Luces de navegación (posición)</a></li>
+                        <li><a href="#beacon">Luces beacon (Anticolisión roja)</a></li>
+                        <li><a href="#estroboscopica">Luces estroboscópicas (Anticolisión blanca)</a></li>
+                    </ul>
+                </ul>
                 <li><a href="#procedimiento">Procedimiento</a></li>
                 <li><a href="#etapas">Etapas del proyecto</a></li>
                 <li><a href="#eléctrico">Diseño del circuito eléctrico</a></li>
-                <li><a href="#aerodinámico">Analisis aerodinámico</a></li>
-                <li><a href="#grafica">Analisis De Las Graficas</a></li>
-                <li><a href="#datos ">Datos de Relevancia en el Funcionamiento y Operación del Sistema de Control de Vuelo en un ATR 72-600</a></li>
-                <li><a href="#función">Funcionamiento y Análisis del Control</a></li>
-                <li><a href="#resultado">Discusión de Resultados</a></li>
-
-
+                <li><a href="#aerodinámico">Análisis aerodinámico</a></li>
+                <li><a href="#grafica">Análisis de las gráficas</a></li>
+                <li><a href="#datos">Datos de relevancia en el funcionamiento y operación del sistema de control de vuelo en un ATR 72-600</a></li>
+                <li><a href="#función">Funcionamiento y análisis del control</a></li>
+                <li><a href="#resultado">Discusión de resultados</a></li>
             </ul>
         </div>
     </div>
-
 
     <script>
         function toggleSidebar() {
@@ -296,21 +306,6 @@
         }
     </script>
 </body>
-</html>
-<body>
-   <div class="sidebar" id="sidebar">
-  <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
-  <div class="sidebar-content">
-    <h2>Contenido</h2>
-    <ul>
-      <li><a href="#intro">Introducción</a></li>
-      <li><a href="#marco">Marco Teórico</a></li>
-      <li><a href="#procedimiento">Procedimiento</a></li>
-      <li><a href="#etapas">Etapas del proyecto</a></li>
-      <li><a href="#eléctrico">Diseño del circuito eléctrico</a></li>
-    </ul>
-  </div>
-</div>
 
 
     <div class="container">
